# L2-Compliance-Checker

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ConsolidatedReport.tsx  Dashboard.tsx  DeviceDetail.tsx  DeviceList.tsx  Import.tsx  Login.tsx  Report.tsx  Reports.tsx  Rules.tsx  Settings.tsx
packaging/: README.md  compliance-checker.iss  compliance-checker.spec  compliance-checker.wxs
src/compliance_checker/: __init__.py  api.py  auth.py  bootstrap.py  config.py  credentials.py  desktop.py  linux_preflight.py  models.py  repository.py  rule_engine.py  rule_loader.py  scheduler.py  service.py
src/compliance_checker/collectors/: discovery.py  mock.py  ssh.py
src/compliance_checker/rules/: arista_stig_l2s.yaml  arista_stig_ndm.yaml  arista_stig_router.yaml  baseline.yaml  cisco_iosxe_stig_l2s.yaml  cisco_iosxe_stig_ndm.yaml  cisco_iosxe_stig_router.yaml  cisco_nxos_stig_l2s.yaml  cisco_nxos_stig_ndm.yaml  cisco_nxos_stig_router.yaml  junos_stig_l2s.yaml  junos_stig_ndm.yaml  (+1 more)
tests/: test_baseline_rules.py  test_changes_and_schedule.py  test_cisco_rule_set.py  test_device_and_credential_crud.py  test_discovery.py  test_full_rule_set.py  test_hop_limit_rule.py  test_junos_rule_set.py  test_overrides.py  test_repository.py  test_rule_engine.py  test_service.py  test_users_and_auth.py
