[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-checker"
version = "0.1.0"
description = "Compliance checks for lab network devices"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10,<4",
    "cryptography>=42,<50",
    "fastapi>=0.115,<1",
    "netmiko>=4.3,<5",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1"]
desktop = [
    "pyinstaller>=6.0,<7",
    "pywebview>=5.0,<6; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "keyring>=25,<26; sys_platform == 'linux'",
]

[project.scripts]
compliance-checker-desktop = "compliance_checker.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]
